Exo 3 parcours en profondeur pour gagner en memoire